--- a/master.css
+++ b/master.css
@@ -6,13 +6,16 @@
 
 .col-12 {
   width: 100%;
-  display: flex;
-  justify-content: center;
   margin-top: 50px;
 }
 
 table {
+  display: flex;
+  justify-content: center;
   margin: 10px auto;
+}
+h1 {
+  text-align: center;
 }
 
 table tr th {
@@ -25,4 +28,18 @@ th{
 
 td {
   text-align: center;
+}
+
+span {
+  padding: 0 10px;
+}
+
+ul {
+  margin-top: 30px;
+  text-align: center;
+}
+
+ul li {
+  display: inline-block;
+  padding: 0 10px;
 }
