Fine esercizio da inserire parte grafica

--- a/master.css
+++ b/master.css
@@ -43,3 +43,25 @@ ul li {
   display: inline-block;
   padding: 0 10px;
 }
+
+.center {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.center input {
+  padding: 0 10px;
+  margin: 0 10px;
+}
+
+button {
+  padding: 10px;
+  border: none;
+  color: black;
+  border-radius: 8px;
+  background-color: #eeee;
+  outline: none;
+  cursor: pointer;
+  font-weight: bold;
+}
