--- a/master.css
+++ b/master.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #0C6291;
+}
+
 .col-12 {
   width: 100%;
   margin-top: 50px;
@@ -30,9 +34,6 @@ td {
   text-align: center;
 }
 
-span {
-  padding: 0 10px;
-}
 
 ul {
   margin-top: 30px;
@@ -40,9 +41,12 @@ ul {
 }
 
 ul li {
-  display: inline-block;
-  padding: 0 10px;
+  list-style: none;
+  padding: 3px 0;
+  color: #ffff;
+  font-weight: bold;
 }
+
 
 .center {
   margin-top: 20px;
@@ -51,8 +55,12 @@ ul li {
 }
 
 .center input {
+  border-radius: 10px;
   padding: 0 10px;
   margin: 0 10px;
+  outline: none;
+  border: none;
+  border: 1px solid black;
 }
 
 button {
@@ -64,4 +72,9 @@ button {
   outline: none;
   cursor: pointer;
   font-weight: bold;
+}
+
+button:hover {
+  background-color: black;
+  color: #ffff;
 }
